--- a/bots.html
+++ b/bots.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>P-ixel part of P-group | Приложения</title>
+    <title>P-ixel part of P-group | Боты</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -54,7 +54,7 @@
         <div class="row align-items-center">
           <div class="col-md-12">
             <h6 data-aos="fade-up">Услуги</a></h6>
-            <h1 class="heading mb-3" data-aos="fade-up">Разработка приложений разной сложности под заказ</h1>
+            <h1 class="heading mb-3" data-aos="fade-up">Разработка ботов для различных социальных сетей</h1>
           </div>
         </div>
       </div>
@@ -72,18 +72,18 @@
 
                 <p><img src="images/img_7.jpg" alt="" class="img-fluid"></p>
 
-                <p>Разработка мобильных приложений — восходящий тренд во всех сферах бизнеса. Предоставляете ли вы кредиты, продаете товары или квартиры, оказываете услуги — создание мобильного приложения под ваш бизнес будет способствовать большему охвату аудитории, оптимизации продаж и росту прибыли.</br></br>Наиболее часто встречаются информационные, игровые и бизнес приложения. Мы осуществляем мобильную разработку под все виды устройств. Последнее время акцент делаем на Unity — среду, которая подойдет для мобильных приложений на Android, iOS и Windows.</br></br>На пике популярности в настоящее время находятся нативные приложения для мобильных гаджетов, основное преимущество которых в том, что они делаются под каждую OS отдельно и работают корректно и быстро. Мы используем комбинированный подход, чтобы сократить сроки и стоимость разработки.</p>
+                <p>На основе полученных данных построим сценарий коммуникации. Первый сценарий будет исключительно функциональным (т.е. что и за чем идет), без учета копирайта (красивых фраз, качественно построенных вопросов и т.д. — характера персонажа).</br></br>Бот может общаться разным языком: более деловым, литературным, разговорным или сленговым. Мы учтем позиционирование компании и проработаем под него копирайт сценария.  Также мы проработаем реакции бота на сообщения, которые он не понимает, вопросы для отправки заявки и т.д.</p>
 
                 <h2 class="mb-3"></br>Прайс</h2>
 
-                <p></br>Приложение ссылка  - от 2 500 руб. - 1-2 дня.</br>Приложение комплексное  - от 270 000 руб. - 2-10 недель.</br>Простая игра на телефон  - от 8 500 руб. - 2-4 недели</br>Платформенный сайт  - от 112 000 руб. - 2-5 недель</p>
+                <p></br>Бот рассылка сообщений  - от 6 500 руб. - 1-4 дня.</br>Бот консультант  - от 8 500 руб. - 1-2 недели.</br>Бот "канарейка"  - от 17 000 руб. - 1-2 недели</br>Бот финансовый  - от 20 000 руб. - 2-8 недели</p>
 
                 <div class="tag-widget post-tag-container mb-5 mt-5">
                   <div class="tagcloud">
-                    <a class="tag-cloud-link">Android</a>
-                    <a class="tag-cloud-link">IOS</a>
-                    <a class="tag-cloud-link">Windows</a>
-                    <a class="tag-cloud-link">Linux</a>
+                    <a class="tag-cloud-link">Python</a>
+                    <a class="tag-cloud-link">Telegram</a>
+                    <a class="tag-cloud-link">VK</a>
+                    <a class="tag-cloud-link">Discord</a>
                   </div>
                 </div>
 
@@ -99,7 +99,7 @@
                     <li><a href="smi.html">СМИ</a></li>
                   </div>
                   <div class="sidebar-box">
-                  <img src="images/application.png" class="img-fluid mb-4 rounded" height="60px" width="170px">
+                  <img src="images/bots.png" class="img-fluid mb-4 rounded" height="90px" width="210px">
                 </div>
                 </div>
               </div>
