--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <div class="row">
 
           <div class="col-3 templateux-logo">
-           <a href="index.html"><img src="images/logo-pix.png" height="70px" width="200px"></a>
+           <a href="index.html"><img src="images/logo-pix.png" height="60px" width="170px"></a>
           </div>
           <nav class="col-9 site-nav">
             <button class="d-block d-md-none hamburger hamburger--spin templateux-toggle templateux-toggle-light ml-auto templateux-toggle-menu" data-toggle="collapse" data-target="#mobile-menu" aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,15 +32,14 @@
                 <a>Услуги</a>
                 <ul>
                   <li><a href="application.html">Приложения</a></li>
-                  <li><a href="application.html">Дизайн</a></li>
-                  <li><a href="application.html">Сайты</a></li>
-                  <li><a href="application.html">Боты</a></li>
-                  <li><a href="application.html">SMM</a></li>
-                  <li><a href="application.html">СМИ</a></li>
+                  <li><a href="design.html">Дизайн</a></li>
+                  <li><a href="pages.html">Сайты</a></li>
+                  <li><a href="bots.html">Боты</a></li>
+                  <li><a href="smm.html">SMM</a></li>
+                  <li><a href="smi.html">СМИ</a></li>
                 </ul>
               </li>
               <li><a href="gallery.html">Кейсы</a></li>
-              <li><a href=""></a></li>
             </ul> <!-- .templateux-menu -->
 
           </nav> <!-- .site-nav -->
