--- a/design.html
+++ b/design.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>P-ixel part of P-group | Приложения</title>
+    <title>P-ixel part of P-group | Дизайн</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -54,7 +54,7 @@
         <div class="row align-items-center">
           <div class="col-md-12">
             <h6 data-aos="fade-up">Услуги</a></h6>
-            <h1 class="heading mb-3" data-aos="fade-up">Разработка приложений разной сложности под заказ</h1>
+            <h1 class="heading mb-3" data-aos="fade-up">Разработка сайтов под заказ: лендинги, копоративные и т.д.</h1>
           </div>
         </div>
       </div>
@@ -72,18 +72,18 @@
 
                 <p><img src="images/img_7.jpg" alt="" class="img-fluid"></p>
 
-                <p>Разработка мобильных приложений — восходящий тренд во всех сферах бизнеса. Предоставляете ли вы кредиты, продаете товары или квартиры, оказываете услуги — создание мобильного приложения под ваш бизнес будет способствовать большему охвату аудитории, оптимизации продаж и росту прибыли.</br></br>Наиболее часто встречаются информационные, игровые и бизнес приложения. Мы осуществляем мобильную разработку под все виды устройств. Последнее время акцент делаем на Unity — среду, которая подойдет для мобильных приложений на Android, iOS и Windows.</br></br>На пике популярности в настоящее время находятся нативные приложения для мобильных гаджетов, основное преимущество которых в том, что они делаются под каждую OS отдельно и работают корректно и быстро. Мы используем комбинированный подход, чтобы сократить сроки и стоимость разработки.</p>
+                <p>Создадим продуманный и креативный логотип для Вашей фирмы!</br></br>Уникальный фирменный стиль дял вашей компании. Заявите о своей компании в сети. Увеличьте поток новых клиентов! Сделаем уникальный дизайн сайта для Вашей фирмы.</br></br>Создадим и оформим презентацию продукта или услуги "под ключ", чтобы Ваш клиент точно её оценил!</p>
 
                 <h2 class="mb-3"></br>Прайс</h2>
 
-                <p></br>Приложение ссылка  - от 2 500 руб. - 1-2 дня.</br>Приложение комплексное  - от 270 000 руб. - 2-10 недель.</br>Простая игра на телефон  - от 8 500 руб. - 2-4 недели</br>Платформенный сайт  - от 112 000 руб. - 2-5 недель</p>
+                <p></br>Обсуждаются полностью индивидуально под техническое задание заказчика.</p>
 
                 <div class="tag-widget post-tag-container mb-5 mt-5">
                   <div class="tagcloud">
-                    <a class="tag-cloud-link">Android</a>
-                    <a class="tag-cloud-link">IOS</a>
-                    <a class="tag-cloud-link">Windows</a>
-                    <a class="tag-cloud-link">Linux</a>
+                    <a class="tag-cloud-link">Логотипы</a>
+                    <a class="tag-cloud-link">Футболки</a>
+                    <a class="tag-cloud-link">Билборды</a>
+                    <a class="tag-cloud-link">Шаблоны</a>
                   </div>
                 </div>
 
@@ -99,7 +99,7 @@
                     <li><a href="smi.html">СМИ</a></li>
                   </div>
                   <div class="sidebar-box">
-                  <img src="images/application.png" class="img-fluid mb-4 rounded" height="60px" width="170px">
+                  <img src="images/design1.png" class="img-fluid mb-4 rounded" height="90px" width="210px">
                 </div>
                 </div>
               </div>
