--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row">
 
           <div class="col-3 templateux-logo">
-            <a href="index.html"><img src="images/logo-pix.png" height="70px" width="200px"></a>
+           <a href="index.html"><img src="images/logo-pix.png" height="60px" width="170px"></a>
           </div>
           <nav class="col-9 site-nav">
             <button class="d-block d-md-none hamburger hamburger--spin templateux-toggle templateux-toggle-light ml-auto templateux-toggle-menu" data-toggle="collapse" data-target="#mobile-menu" aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,15 +34,14 @@
                 <a>Услуги</a>
                 <ul>
                   <li><a href="application.html">Приложения</a></li>
-                  <li><a href="application.html">Дизайн</a></li>
-                  <li><a href="application.html">Сайты</a></li>
-                  <li><a href="application.html">Боты</a></li>
-                  <li><a href="application.html">SMM</a></li>
-                  <li><a href="application.html">СМИ</a></li>
+                  <li><a href="design.html">Дизайн</a></li>
+                  <li><a href="pages.html">Сайты</a></li>
+                  <li><a href="bots.html">Боты</a></li>
+                  <li><a href="smm.html">SMM</a></li>
+                  <li><a href="smi.html">СМИ</a></li>
                 </ul>
               </li>
-              <li><a href="gallery.html">Кейсы</a></li>
-              <li><a href=""></a></li>
+              <li><a href="gallery.html">Кейсы</br></a></li>
             </ul> <!-- .templateux-menu -->
 
           </nav> <!-- .site-nav -->
@@ -56,11 +55,10 @@
       <div class="container">
         <div class="row align-items-lg-center">
           <div class="col-lg-6 order-lg-1">
-            <h1 class="heading mb-3" data-aos="fade-up">Агентство разработок и маркетинга</h1>
-            <p class="lead mb-5" data-aos="fade-up"  data-aos-delay="100">Мы организация, стремящаяся реализовать всевозможные задумки для развития вашей организации.</p>
-            <p data-aos="fade-up" data-aos-delay="200"><a href="#" class="btn btn-primary py-3 px-4">Наши кейсы</a></p>
+            <h1 class="heading mb-3" data-aos="fade-up"></br></br>Агентство разработок и маркетинга</h1>
+            <p class="lead mb-5" data-aos="fade-up"  data-aos-delay="100">Мы организация, стремящаяся реализовать всевозможные задумки для развития вашей организации.</br></br></p>
+            <p data-aos="fade-up" data-aos-delay="200"><a href="gallery.html#gallery-2" class="btn btn-primary py-3 px-4">Наши кейсы</a></p>
           </div>
-          
         </div>
       </div>
     </div> <!-- .templateux-cover -->
