--- a/gallery.html
+++ b/gallery.html
@@ -67,7 +67,7 @@
             <a href="images/1.png" data-fancybox="gallery" data-caption="Сайт для команды mother.hacker"><img src="images/1.png" alt="Free template by TemplateUX" class="img-fluid"></a>
           </div>
           <div class="col-md-6 col-lg-4 mb-4">
-            <a href="images/wyvern.PNG" data-fancybox="gallery" data-caption="Сайт для дистрибутива Wyvern Linux"><img src="images/wyvern.PNG" alt="Free template by TemplateUX" class="img-fluid"></a>
+            <a href="images/wyvern.PNG" data-fancybox="gallery" data-caption="Сайт для дистрибутива Wyvern Linux"><img src="images/Wyvern.PNG" alt="Free template by TemplateUX" class="img-fluid"></a>
           </div>
            <div class="col-md-6 col-lg-4 mb-4">
             <a href="images/manga.PNG" data-fancybox="gallery" data-caption="Платформа для чтение манги"><img src="images/manga.PNG" alt="Free template by TemplateUX" class="img-fluid"></a>
